# mdviewer

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  Package.resolved  Package.swift  README.md  SECURITY.md  package-lock.json  package.json  project.yml
.github/workflows/: ci.yml  release-macos.yml  release-windows-linux.yml
.superpowers/sdd/: task-10-report.md
MDViewer.xcodeproj/: project.pbxproj
MDViewer.xcodeproj/xcshareddata/xcschemes/: MDViewer.xcscheme
Sources/MDViewer/: AppAppearance.swift  AppPreferences.swift  AppState.swift  AppVersion.swift  ContentView.swift  DocumentSearchCommands.swift  MDViewerApp.swift  MarkdownAssociationService.swift  MarkdownFileDocument.swift  MarkdownHTMLRenderer.swift  MarkdownRenderPipeline.swift  MarkdownRenderer.swift  MarkdownTextView.swift  MarkdownWebView.swift  PDFExporter.swift  SaveAsMarkdownCommands.swift  SettingsView.swift  WindowTabbingConfigurator.swift
Sources/MDViewer/Conversion/: ConversionError.swift  DocumentConversionService.swift  FormatDetector.swift  MarkdownConversionResult.swift  OOXMLHelpers.swift
Tests/MDViewerTests/: CSVToMarkdownConverterTests.swift  DOCXToMarkdownConverterTests.swift  DocumentConversionServiceTests.swift  FormatDetectorTests.swift  HTMLToMarkdownConverterTests.swift  JSONToMarkdownConverterTests.swift  MDViewerTests.swift  PPTXToMarkdownConverterTests.swift  XLSXToMarkdownConverterTests.swift  XMLToMarkdownConverterTests.swift  YouTubeToMarkdownConverterTests.swift  ZIPToMarkdownConverterTests.swift
Tests/MDViewerTests/Fixtures/: sample.xml  youtube_captions.xml
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  main.tsx  test-setup.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  deep_link.rs  jobs.rs  lib.rs  macos_integration.rs  macos_virtual_printer.rs  main.rs  state.rs
apps/desktop/src-tauri/tests/: commands.rs  jobs.rs  macos_integration.rs  macos_virtual_printer.rs
apps/desktop/tests/: conversion.spec.ts  conversion.spec.tsx  editor.spec.ts  editor.spec.tsx
config/audit/: rust-advisory-allowlist.txt
crates/mdconvert-cli/: Cargo.toml
crates/mdconvert-cli/src/: lib.rs  main.rs  result.rs
crates/mdconvert-cli/tests/: cli.rs
crates/mdconvert-core/: Cargo.toml
crates/mdconvert-core/src/: converter.rs  error.rs  gfm.rs  lib.rs  manifest.rs  model.rs  output.rs  path_policy.rs
crates/mdconvert-core/tests/: gfm_emitter.rs  model_contract.rs  output_transaction.rs
crates/mdconvert-formats/: Cargo.toml
crates/mdconvert-formats/src/: archive.rs  csv.rs  detect.rs  docx.rs  epub.rs  image.rs  json.rs  lib.rs  pptx.rs  xlsx.rs  xml.rs
crates/mdconvert-formats/tests/: container_formats.rs  image_with_ocr.rs  image_without_ocr.rs  structured_formats.rs
crates/mdconvert-html/: Cargo.toml
crates/mdconvert-html/src/: convert.rs  dom.rs  lib.rs
crates/mdconvert-html/tests/: html_conversion.rs
crates/mdconvert-ocr/: Cargo.toml
crates/mdconvert-ocr/src/: lib.rs  tesseract.rs  vision.rs  windows_ocr.rs
crates/mdconvert-ocr/tests/: contract.rs  vision_macos.rs
crates/mdconvert-pdf/: Cargo.toml
crates/mdconvert-pdf/src/: bindings.rs  convert.rs  extract.rs  heuristics.rs  layout.rs  lib.rs  raw.rs
crates/mdconvert-pdf/tests/: pdf_conversion.rs  raw_extraction.rs
docs/architecture/: swift-baseline.md
docs/reference/: cli.md
docs/release/: code-signing-policy.md  macos.md  v1-parity-report.md  v1.1.md  v1.2.1.md  v1.2.md  windows-linux.md
docs/superpowers/plans/: 2026-06-15-markitdown-native-integration.md  2026-07-15-cross-platform-save-as-markdown-implementation.md  2026-07-17-local-ocr-v1.1-implementation.md  2026-07-17-multiplatform-distribution-v1.2.1-implementation.md  2026-07-17-ocr-residuals-v1.2-implementation.md
docs/superpowers/specs/: 2026-06-15-markitdown-native-integration-design.md  2026-07-15-cross-platform-save-as-markdown-design.md  2026-07-17-local-ocr-v1.1-design.md  2026-07-17-macos-virtual-printer-design.md  2026-07-17-multiplatform-distribution-v1.2.1-design.md  2026-07-17-ocr-residuals-v1.2-design.md
docs/user-guide/: macos-print-workflow.md
legacy/macos-swift/: Package.swift
legacy/macos-swift/MDViewer.xcodeproj/: project.pbxproj
legacy/macos-swift/macos/: AppIcon.icns  Info.plist  MarkdownDocument.icns
legacy/macos-swift/scripts/: appstoreconnect_api.py  archive-appstore.sh  create-dmg.sh  install-app.sh  notarize-app.sh  notarize-dmg.sh  package-app.sh  verify-gatekeeper.sh
macos/: AppIcon.icns  ExportOptions-AppStore.plist  Info.plist  MarkdownDocument.icns
platform/macos/pdf-workflow/: Cargo.toml
platform/macos/pdf-workflow/src/: lib.rs  main.rs
platform/macos/pdf-workflow/tests/: workflow.rs
scripts/: appstoreconnect_api.py  archive-appstore.sh  archive-signed-app.sh  audit.sh  create-dmg.sh  fetch-pdfium.sh  fetch-tessdata.sh  generate_icon.swift  notarize-dmg.sh  notarize-macos.sh  package-app.sh  package-linux-x64.sh  package-macos-arm64.sh  package-windows-x64.ps1  release-common.sh  test-fetch-pdfium.sh  test-release-scripts.sh  verify-legacy-swift.sh  verify-linux-release.sh  verify-parity.sh  verify-release.sh  verify-windows-release.ps1  verify-workspace.sh
tests/fixtures/formats/: README.md  displayed.xlsx  mixed.xml  nested.json  ordered.pptx  quoted-ragged.csv  semantic.docx  spine.epub
tests/fixtures/html/: malformed.html  semantic.html
tests/golden/core/: all-blocks.md
tests/golden/formats/: bounded.zip.md  displayed.xlsx.md  metadata.jpg.md  metadata.png.md  mixed.xml.md  nested.json.md  ordered.pptx.md  quoted-ragged.csv.md  sample.json.md  sample.xml.md  semantic.docx.md  spine.epub.md
tests/golden/html/: malformed.md  semantic.md
tests/golden/pdf/: digital-basic.md  headings-lists.md  (+4 more)
tests/parity/: manifest.json  verify-parity.test.sh
(+67 files in other folders)
