[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/mdconvert-cli",
    "crates/mdconvert-core",
    "crates/mdconvert-formats",
    "crates/mdconvert-html",
    "crates/mdconvert-pdf",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"

[workspace.dependencies]
tauri = "=2.11.5"

[workspace.metadata.mdviewer]
parity-manifest = "tests/parity/manifest.json"
parity-command = "scripts/verify-parity.sh"
