[package]
name = "mdconvert-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mdconvert-core = { path = "../mdconvert-core" }
mdconvert-formats = { path = "../mdconvert-formats" }
mdconvert-html = { path = "../mdconvert-html" }
mdconvert-pdf = { path = "../mdconvert-pdf" }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"

[[bin]]
name = "mdconvert"
path = "src/main.rs"

[[test]]
name = "cli"
path = "tests/cli.rs"
