[package]
name = "mdconvert-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
thiserror = "=2.0.18"
url = { version = "=2.5.8", features = ["serde"] }

[dev-dependencies]
serde_json = "=1.0.150"
