[package]
name = "mdconvert-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
sha2 = "=0.11.0"
tempfile = "=3.27.0"
thiserror = "=2.0.18"
unicode-normalization = "=0.1.25"
url = { version = "=2.5.8", features = ["serde"] }
