[package]
name = "mdconvert-formats"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crc32fast = "=1.5.0"
flate2 = { version = "=1.1.9", default-features = false, features = ["rust_backend"] }
mdconvert-core = { path = "../mdconvert-core" }
mdconvert-html = { path = "../mdconvert-html" }
quick-xml = "=0.41.0"
serde = "=1.0.228"
serde_json = { version = "=1.0.150", features = ["arbitrary_precision", "preserve_order", "unbounded_depth"] }
thiserror = "=2.0.18"
url = "=2.5.8"

[dev-dependencies]
tempfile = "=3.27.0"
