[package]
name = "mdconvert-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror = "=2.0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-foundation = { version = "=0.3.2", default-features = false, features = [
    "std",
    "NSArray",
    "NSData",
    "NSDictionary",
    "NSError",
    "NSString",
] }
objc2-vision = { version = "=0.3.2", default-features = false, features = [
    "std",
    "VNObservation",
    "VNRecognizeTextRequest",
    "VNRequest",
    "VNRequestHandler",
    "VNTypes",
    "objc2-core-foundation",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.62.2", features = [
    "Foundation",
    "Graphics_Imaging",
    "Media_Ocr",
    "Storage_Streams",
    "Win32_System_WinRT",
] }

[target.'cfg(target_os = "linux")'.dependencies]
leptess = "=0.14.0"

[dev-dependencies]
font8x8 = "=0.3.1"
png = "=0.18.1"
tempfile = "=3.27.0"
