[package]
name = "mdconvert-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mdconvert-core = { path = "../mdconvert-core" }
mdconvert-ocr = { path = "../mdconvert-ocr" }
pdfium-render = { version = "=0.9.3", default-features = false, features = ["image_025", "pdfium_7881", "thread_safe"] }
png = "=0.18.1"
url = "=2.5.8"

[dev-dependencies]
font8x8 = "=0.3.1"
tempfile = "=3.27.0"
