[package]
name = "mdviewer-pdf-workflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
mdviewer-desktop = { path = "../../../apps/desktop/src-tauri" }
thiserror = "=2.0.18"

[dev-dependencies]
tempfile = "=3.27.0"

[[bin]]
name = "mdviewer-pdf-workflow"
path = "src/main.rs"
